--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -58,7 +58,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Command\ACommand.cs" />
+    <Compile Include="Command\ForCommand.cs" />
+    <Compile Include="Command\WaitCommand.cs" />
+    <Compile Include="Command\WaituserCommand.cs" />
+    <Compile Include="Command\ReturnCommand.cs" />
+    <Compile Include="Command\NotationCommand.cs" />
     <Compile Include="Command\JumpCommand.cs" />
+    <Compile Include="Command\BreakCommand.cs" />
     <Compile Include="Command\SwitchCommand.cs" />
     <Compile Include="Command\LabelCommand.cs" />
     <Compile Include="Command\VocalCommand.cs" />
@@ -112,12 +118,6 @@
     <Compile Include="YuriForms\DrawStringForm.Designer.cs">
       <DependentUpon>DrawStringForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="YuriForms\ForForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="YuriForms\ForForm.Designer.cs">
-      <DependentUpon>ForForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="YuriForms\FunctionCallForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +153,12 @@
     </Compile>
     <Compile Include="YuriForms\NewProjectForm.Designer.cs">
       <DependentUpon>NewProjectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="YuriForms\NotationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YuriForms\NotationForm.Designer.cs">
+      <DependentUpon>NotationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="YuriForms\SwitchesForm.cs">
       <SubType>Form</SubType>
@@ -262,9 +268,6 @@
     <EmbeddedResource Include="YuriForms\DrawStringForm.resx">
       <DependentUpon>DrawStringForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="YuriForms\ForForm.resx">
-      <DependentUpon>ForForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="YuriForms\FunctionCallForm.resx">
       <DependentUpon>FunctionCallForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -295,6 +298,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="YuriForms\NewProjectForm.resx">
       <DependentUpon>NewProjectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="YuriForms\NotationForm.resx">
+      <DependentUpon>NotationForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="YuriForms\SwitchesForm.resx">
       <DependentUpon>SwitchesForm.cs</DependentUpon>
