--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -121,6 +121,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
     </Compile>
     <None Include="app.config" />
+    <None Include="PlatformClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
