--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Reference Include="Bass.Net, Version=2.4.11.1, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\BASS.NET\v4.0\Bass.Net.dll</HintPath>
+      <HintPath>bin\Debug\Bass.Net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
