模仿RenPy，实现调用堆栈和符号表的完全回滚效果

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -67,6 +67,8 @@
     </ApplicationDefinition>
     <Compile Include="Director.cs" />
     <Compile Include="ILPackage\ConfigParser.cs" />
+    <Compile Include="PlatformCore\CloneableState.cs" />
+    <Compile Include="PlatformCore\RollbackManager.cs" />
     <Compile Include="Utils\CommonUtils.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="Utils\PackageUtils.cs" />
