--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -67,7 +67,7 @@
     </ApplicationDefinition>
     <Compile Include="Director.cs" />
     <Compile Include="ILPackage\ConfigParser.cs" />
-    <Compile Include="PlatformCore\CloneableState.cs" />
+    <Compile Include="PlatformCore\CloneableDescriptor.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
     <Compile Include="Utils\CommonUtils.cs" />
     <Compile Include="Utils\IOUtils.cs" />
@@ -124,6 +124,7 @@
     </Compile>
     <None Include="app.config" />
     <None Include="PlatformClassDiagram.cd" />
+    <Compile Include="PlatformCore\ForkableState.cs" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
