定义了场景镜头的接口

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -69,6 +69,8 @@
     <Compile Include="ILPackage\ConfigParser.cs" />
     <Compile Include="PlatformCore\CloneableDescriptor.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
+    <Compile Include="PlatformCore\SCamera.cs" />
+    <Compile Include="PlatformCore\StepStatePackage.cs" />
     <Compile Include="Utils\CommonUtils.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="Utils\PackageUtils.cs" />
