--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -72,6 +72,7 @@
     </Compile>
     <Compile Include="PlatformCore\NotificationManager.cs" />
     <Compile Include="PlatformCore\CloneableDescriptor.cs" />
+    <Compile Include="PlatformCore\PersistenceContext.cs" />
     <Compile Include="PlatformCore\ResourceCachePool.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
     <Compile Include="PlatformCore\SCamera.cs" />
@@ -111,7 +112,7 @@
   <ItemGroup>
     <Compile Include="PlatformCore\BranchButton.cs" />
     <Compile Include="PlatformCore\BranchButtonDescriptor.cs" />
-    <Compile Include="PlatformCore\GlobalDataContainer.cs" />
+    <Compile Include="PlatformCore\GlobalDataContext.cs" />
     <Compile Include="PlatformCore\Interrupt.cs" />
     <Compile Include="PlatformCore\MessageLayer.cs" />
     <Compile Include="PlatformCore\MessageLayerDescriptor.cs" />
