--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -80,7 +80,7 @@
     <Compile Include="PlatformCore\ResourceCachePool.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
     <Compile Include="PlatformCore\SCamera.cs" />
-    <Compile Include="PlatformCore\StepStatePackage.cs" />
+    <Compile Include="PlatformCore\RollbackableSnapshot.cs" />
     <Compile Include="PlatformCore\ViewPageManager.cs" />
     <Compile Include="PlatformCore\ViewportDescriptor.cs" />
     <Compile Include="PlatformCore\YuriViewport.cs" />
