--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -82,6 +82,7 @@
     <Compile Include="PlatformCore\NotificationManager.cs" />
     <Compile Include="PlatformCore\CloneableDescriptor.cs" />
     <Compile Include="PlatformCore\PersistenceContext.cs" />
+    <Compile Include="PlatformCore\PolishEvaluator.cs" />
     <Compile Include="PlatformCore\ResourceCachePool.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
     <Compile Include="PlatformCore\SCamera.cs" />
