--- a/Lyyneheym/YuriLauncher/YuriLauncher.csproj
+++ b/Lyyneheym/YuriLauncher/YuriLauncher.csproj
@@ -123,6 +123,9 @@
   <ItemGroup>
     <Resource Include="Resources\Keyset.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Sysbg_Izetta.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
