--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -85,15 +85,15 @@
     <Compile Include="PlatformCore\PolishEvaluator.cs" />
     <Compile Include="PlatformCore\ResourceCachePool.cs" />
     <Compile Include="PlatformCore\RollbackManager.cs" />
-    <Compile Include="PlatformCore\SCamera.cs" />
+    <Compile Include="PlatformCore\SCamera2D.cs" />
     <Compile Include="PlatformCore\RollbackableSnapshot.cs" />
+    <Compile Include="PlatformCore\SCamera3D.cs" />
     <Compile Include="PlatformCore\ViewPageManager.cs" />
     <Compile Include="PlatformCore\ViewportDescriptor.cs" />
     <Compile Include="PlatformCore\YuriViewport.cs" />
-    <Compile Include="PageView\StagePage.xaml.cs">
-      <DependentUpon>StagePage.xaml</DependentUpon>
+    <Compile Include="PageView\Stage2D.xaml.cs">
+      <DependentUpon>Stage2D.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings.cs" />
     <Compile Include="Utils\CommonUtils.cs" />
     <Compile Include="Utils\IOUtils.cs" />
     <Compile Include="Utils\PackageUtils.cs" />
@@ -119,7 +119,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="PageView\StagePage.xaml">
+    <Page Include="PageView\Stage2D.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
