重构View，将3D和2D分开

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -90,7 +90,7 @@
     <Compile Include="PlatformCore\SCamera3D.cs" />
     <Compile Include="PlatformCore\ViewPageManager.cs" />
     <Compile Include="PlatformCore\ViewportDescriptor.cs" />
-    <Compile Include="PlatformCore\YuriViewport.cs" />
+    <Compile Include="PlatformCore\YuriViewport2D.cs" />
     <Compile Include="PageView\Stage2D.xaml.cs">
       <DependentUpon>Stage2D.xaml</DependentUpon>
     </Compile>
