update: rollback时msglayer直接显示

--- a/Lyyneheym/Lyyneheym/YuriPlatform.csproj
+++ b/Lyyneheym/Lyyneheym/YuriPlatform.csproj
@@ -113,7 +113,7 @@
     <Compile Include="PlatformCore\RollbackableSnapshot.cs" />
     <Compile Include="PlatformCore\SCamera3D.cs" />
     <Compile Include="PlatformCore\ViewPageManager.cs" />
-    <Compile Include="PlatformCore\ViewportDescriptor.cs" />
+    <Compile Include="PlatformCore\Viewport2DDescriptor.cs" />
     <Compile Include="PlatformCore\YuririWorld.cs" />
     <Compile Include="PlatformCore\YuriViewport2D.cs" />
     <Compile Include="PageView\Stage2D.xaml.cs">
