update halation ico

--- a/Lyyneheym/YuriHalation/YuriHalation.csproj
+++ b/Lyyneheym/YuriHalation/YuriHalation.csproj
@@ -479,6 +479,9 @@
   <ItemGroup>
     <Resource Include="Assets\ScrPartition.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\HalationLogo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
